# mimic_codex

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .spectral.yaml  AGENTS.md  README.md  config.toml  conftest.py  docker-compose.yml  profiles.yaml  pyproject.toml  Глава 10 Рекомендации по кодовой базе и процессу.md  Глава 3 Системный дизайн данные, авторинг, рантайм.md  Глава 4 Контракты API и событий (contracts-first).md  Глава 6 Операции безопасность, наблюдаемость, QA и деплой.md  Глава 7 Методология агентной разработки (Codex).md  Глава 8 Память37.txt
.github/workflows/: ci.yml
apps/webapp/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
config/knowledge/: knowledge.yaml
config/prompt/: generation.yaml
contracts/events/: event_envelope.schema.json
contracts/examples/: telegram_auth_request.json  telegram_auth_response.json
contracts/jsonschema/: combat_response.schema.json  epilogue_response.schema.json  media_job_response.schema.json  scene_response.schema.json  social_response.schema.json  telegram_auth_request.schema.json  telegram_auth_response.schema.json
contracts/openapi/: rpg-bot.yaml
data/knowledge/: README.md  sample.yaml
deploy/pipelines/: README.md  cloud-run.yaml
docs/: 00-obt-overview-and-waves.md  01-campaign-engine-spec.md  02-players-characters-parties-spec.md  03-world-and-retcon-spec.md  04-content-pipeline-season1-spec.md  05-realtime-and-party-sync-spec.md  06-media-layer-spec.md  architecture.md  rpg-bot-backend-waveA-job.md  rpg-bot-backend-waveB-job.md  rpg-bot-backend-waveC-job.md  rpg-bot-genlayers-generate-v1.md  rpg-bot-memory37-graph-rag-spec.md  Глава 5 Данные и медиапайплайн .md
docs/ADRs/: 0000-template.md
docs/_Leg_tz_done/: 01-campaign-content-pack-responce.md  01-content-pack-responce.md  02-generation-profiles-retcon-responce.md  02-profiles-quality-metrics-ab-responce.md  03-ux-states-retcon-guide-responce.md
docs/architecture/: ai-stack.md  (+3 more)
observability/: logging.json  trace-context.md
security/: owasp-api-top10-checklist.md
tools/: CHUNKING.md  dev_run.py  import_lore_content.py  postgres_mcp_stdio.mjs  run_mcp_fs_git.sh  smoke.py  start_context_engine.cmd
(+119 files in other folders)
